Bug 103784 - [bisected] Egl changes breaks all of EGL
Summary: [bisected] Egl changes breaks all of EGL
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: EGL (show other bugs)
Version: git
Hardware: Other All
: highest critical
Assignee: Emil Velikov
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-16 18:36 UTC by Dylan Baker
Modified: 2017-11-16 19:06 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Dylan Baker 2017-11-16 18:36:41 UTC
40a01c9a0ef2c8110d79c284976ef34c0f73be92 is the first bad commit
commit 40a01c9a0ef2c8110d79c284976ef34c0f73be92
Author: Emil Velikov <emil.velikov@collabora.com>
Date:   Thu Nov 9 19:04:25 2017 +0000

    egl/drm: move teardown code to the platform file

    Signed-off-by: Emil Velikov <emil.velikov@collabora.com>
    Reviewed-by: Eric Engestrom <eric.engestrom@imgtec.com>

:040000 040000 2b357f3f681f8c4a1a672dd7694f18b4866226d8 0b1507c3b436555f37c160ebed6757ebcd84e41a M      src
Comment 1 Dylan Baker 2017-11-16 18:38:42 UTC
You can easily verify this via:
wflinfo --platform gbm -a gl
Comment 2 Emil Velikov 2017-11-16 18:42:41 UTC
I've posted a fix was on the list at the same moment you opened the bug.

https://patchwork.freedesktop.org/patch/188753/


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.